@@ -1,3 +1,9 @@
+2007-06-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* gconf-property-editor.c: (peditor_string_value_changed): compare the
+	string from the widget against the converted gconf value, not the
+	unmodified one
+
 2007-06-26  Michael Terry  <mike@mterry.name>
 
 	* capplet-util.c, Makefile.am: Drastically simplify capplet_set_icon()
